--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dev.nevah5.mc</groupId>
-    <artifactId>Spigot Plugin Template</artifactId>
+    <artifactId>BungeePlugin</artifactId>
     <version>1.0.0</version>
 
     <properties>
