Changed package name

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
 name: BungeePlugin
-main: dev.nevah5.mc.bungee_plugin.BungeePlugin
+main: dev.nevah5.mc.bungeePplugin.BungeePlugin
 version: 1.0.0
 author: mc.nevah5.dev
