--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
     </repositories>
     <dependencies><!-- https://mvnrepository.com/artifact/net.md-5/bungeecord-api -->
         <dependency>
+            <groupId>net.luckperms</groupId>
+            <artifactId>api</artifactId>
+            <version>5.4</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>net.md-5</groupId>
             <artifactId>bungeecord-api</artifactId>
             <version>1.16-R0.4</version>
